# kit_supremo

./:  .gitignore  .clauderc  .cursorrules  .env.example  .gitignore  CLAUDE.md  PROJECT_MAP.md  README.md  STATUS.md  commit.ps1  commit.sh  files.txt  setup-kit.ps1  suprematize.ps1  suprematize.sh
.agents/engine/: pyproject.toml
.agents/engine/antigravity_engine/: __main__.py  _cli_entry.py  config.py
.agents/engine/antigravity_engine/hub/: agents.py  ask_tools.py  mcp_server.py  pipeline.py  scanner.py
.agents/engine/antigravity_engine/skills/: loader.py
.agents/engine/antigravity_engine/skills/graph-retrieval/: SKILL.md  tools.py
.agents/engine/antigravity_engine/skills/knowledge-layer/: SKILL.md  tools.py
.agents/engine/tests/: test_ask_tools.py  test_graph_skills.py  test_hub_agents_import.py  test_hub_pipeline.py  test_hub_scanner.py  test_mcp_integration.py
.agents/rules/: MASTER.md
.agents/skills/integrations-chatwoot/: SKILL.md
.agents/skills/integrations-chatwoot/references/: app-automation.md  app-core.md  app-crm.md  client-api.md  infrastructure.md  platform-api.md
.agents/skills/integrations-n8n/: SKILL.md
.agents/skills/integrations-n8n/references/: code-nodes.ts  expression-syntax.md  mcp-tools.md  (+10 more)
.agents/skills/integrations-nuvem-fiscal/: SKILL.md
.agents/skills/integrations-supabase/: SKILL.md
.agents/skills/integrations-woovi/: SKILL.md
.agents/skills/skill-creator/: .skillfish.json  SKILL.md
.agents/workflows/: align.md
.context/: ARCHITECTURE.md  chatwoot.md
src/shared/chatwoot/: client.ts  types.ts  webhooks.ts
(+14 files in other folders)
