[project]
name = "antigravity-engine"
version = "0.2.0"
description = "Dynamic multi-agent Knowledge Hub and MCP server"
requires-python = ">=3.10"
dependencies = [
    "pydantic",
    "pydantic-settings",
    "python-dotenv",
    "requests",
    "mcp[cli]>=1.0.0",
    "openai-agents[litellm]",
]

[project.scripts]
ag-ask = "antigravity_engine._cli_entry:ask_main"
ag-refresh = "antigravity_engine._cli_entry:refresh_main"
ag-mcp = "antigravity_engine.hub.mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["antigravity_engine"]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]
